--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # mysql 
-spring.datasource.url=jdbc:mysql://localhost:3306/prolim
+spring.datasource.url=jdbc:mysql://localhost:3306/phase3
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
